--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <div id="container">
     <form class="prognoza" action="/" method="post">
       <label for="cityInput">City Name: </label>
-      <input id="cityInput" type="text" name="cityName">
+      <input id="cityInput" type="text" name="cityName" size="20">
       <button type="submit">Go</button>
     </form>
   </div>
